tests/code/pages/errors/send-404.tht

// 404
Output.sendError(404)
